bk_ida/gccida/c1/clear_table
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_table/src/cselib.c:723:13: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
htab_empty( hash_table_0); 
            ^~~~~~~~~~~~
            hash_table
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_table/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_table/src/obj/cselib.o] Error 1
